--- a/MyMemory/app/build.gradle
+++ b/MyMemory/app/build.gradle
@@ -88,5 +88,12 @@ dependencies {
     //okhttp profiler for better debugging
     implementation 'com.itkacher.okhttpprofiler:okhttpprofiler:1.0.5'
 
+    //enables snackbar to show brief messages on screen
+    implementation 'com.google.android.material:material:1.0.0'
+
+    //recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+
 
 }
