--- a/MyMemory/app/build.gradle
+++ b/MyMemory/app/build.gradle
@@ -93,7 +93,10 @@ dependencies {
 
     //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.room:room-runtime:2.1.0'
 
-
+    //room components
+    implementation "androidx.room:room-runtime:2.1.0"
+    kapt "androidx.room:room-compiler:2.1.0"
 
 }
