--- a/MyMemory/app/build.gradle
+++ b/MyMemory/app/build.gradle
@@ -99,4 +99,6 @@ dependencies {
     implementation "androidx.room:room-runtime:2.1.0"
     kapt "androidx.room:room-compiler:2.1.0"
 
+    // Anko
+    implementation 'org.jetbrains.anko:anko-common:0.10.4'
 }
