--- a/MyMemory/app/build.gradle
+++ b/MyMemory/app/build.gradle
@@ -7,6 +7,9 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 
+apply plugin: 'org.jetbrains.dokka-android'
+
+
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
@@ -26,9 +29,6 @@ android {
     }
     dataBinding {
         enabled = true
-    }
-    kapt {
-        generateStubs = true
     }
 }
 
@@ -59,7 +59,7 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$versions.architecture"
 
     // Data binding
-    annotationProcessor "com.android.databinding:compiler:3.1.4"
+    kapt "com.android.databinding:compiler:3.1.4"
 
     // RxJava
     implementation "io.reactivex.rxjava2:rxjava:$versions.rx"
@@ -99,6 +99,13 @@ dependencies {
     implementation "androidx.room:room-runtime:2.1.0"
     kapt "androidx.room:room-compiler:2.1.0"
 
-    // Anko
+    // Anko (makes some things easier, f.e. enables doAsync
     implementation 'org.jetbrains.anko:anko-common:0.10.4'
+
+
+}
+dokka {
+    outputFormat = 'html'
+    outputDirectory = "$buildDir/dokkadocs"
+
 }
