--- a/MyMemory/app/build.gradle
+++ b/MyMemory/app/build.gradle
@@ -102,6 +102,11 @@ dependencies {
     // Anko (makes some things easier, f.e. enables doAsync
     implementation 'org.jetbrains.anko:anko-common:0.10.4'
 
+    androidTestImplementation "androidx.arch.core:core-testing:2.0.1"
+    androidTestImplementation "android.arch.persistence.room:testing:2.1.0"
+    testImplementation "androidx.arch.core:core-testing:2.0.1"
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
+
 
 }
 dokka {
