--- a/MyMemory/app/src/main/AndroidManifest.xml
+++ b/MyMemory/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.mymemory">
+          xmlns:tools="http://schemas.android.com/tools" package="com.example.mymemory">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-            android:name=".App"
+            android:name="com.example.mymemory.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activities.AddEditMemoryActivity">
         </activity>
         <activity android:name=".activities.QuoteActivity">
